app/styles/main.css
body, html {
	height: 100%;
	width: 100%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-overflow-scrolling: touch;
}

.wrapper {
	height: 100%;
	width: 100%;
	overflow: hidden;
}

property-search a:not(.btn), property-search a:active:not(.btn), property-search a:visited:not(.btn) {
	color: rgb(0, 137, 255);
}


property-search a:hover:not(.btn) {
	color: yellow;
}

app-header {
  overflow: hidden;
}

select {
  background-color: #666;
  color: white;
}

.navbar {
	margin-bottom: 0;
  background-color: #222;
  overflow: hidden;
  max-height: 50px;
}

#map {
	background-color: black;
	position: fixed;
	top:50px;
	bottom: 0;
	right: 0;
	left: 0;

}

.panel-default > .panel-heading {
  background: rgb(84,134,50);
  -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
  border: none;
  margin-top: 0 !important;
  color: white;
  border-radius: 0;
}

.panel-default {
  border: none;
}

.accordion {
  position: relative;
  overflow: none;
}

.panel {
  background-color: transparent;
}

.panel-body {
  background-color: rgba(60,60,60,0.8);
  color: white;
  border: none !important;
}

.collapse-header {
  color: white;
  font-size: 16pt;
  font-weight: normal;
  margin: 1em;
  cursor: pointer;
}

.collapse-header .glyphicon{
  color: white;
  margin-right: 10px;
  font-size: 16pt;
}


.collapse-panel {
  color: white;
    overflow: hidden;
    transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height;
}

side-panel {
  z-index: 101;
}

tool-panel {
  position: absolute;
  top: 50px;
  left:0px;
  z-index: 100;
  background-color: rgba(60,60,60,0.8);
  border-radius: 0 0 8px 0;
    -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
}

tool-panel .glyphicon {
	cursor: pointer;
}

print-tool > form{
	padding:10px;
}

base-map-panel {
  position: absolute;
  top: 50px;
  right:300px;
  z-index: 100;
  background-color: rgba(60,60,60,0.8);
  border-radius: 0 0  0 8px ;
  transition-property: right;
  transition: 0.5s;
    -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
}

overview-panel {
  position: absolute;
  bottom: 0;
  right:300px;
  z-index: 100;
  background-color: rgba(60,60,60,0.8);
  border-radius: 8px 0  0  ;
  transition-property: right;
  transition: 0.5s;
    -moz-box-shadow: 0 0 16px rgba(0,0,0,0.8);
  box-shadow: 0 0 16px rgba(0,0,0,0.8);
}
.esriOverviewMap {
  width: 100% !important;
}

.ovwContainer {
  width: 100% !important;
}
#overview-map {
  width: 100% !important;
}
#overview-map_root {
  width: 100% !important;
}


.btn-group {
  z-index: 1000;
}
.btn-default, .btn-default:hover, .btn-default:active, .btn-default:focus {
  background-color: transparent;
  color: white;
}


property-search {
  position: absolute;
  top: 40px;
  bottom: 0;
  right: 0;
  left: 0;
  overflow: none;
}


layer-list .panel-body {
  overflow: auto;
}

.tabcontainer {
  position: absolute;
  top: 40px;
  left: 0px;
  bottom: 40px;
  width: 100%;
  overflow-y: auto;
  overflow-x: hidden;
}

#proptabs {
  position: absolute;
  bottom: -15px;
  left: -15px;
  right: -15px;
  height: 40px;
  background: #444;
  display: inline-block;
  padding-right: 12px;
  padding-left: 12px;
}

#proptabs .glyphicon {
  font-size: 16pt;
  margin: 6px;
  cursor: pointer;
}

.glyphicon.highlighted{
  -moz-text-shadow: 0 0 16px rgba(71,151,220,1),0 0 16px rgba(0, 137, 255, 1),0 0 16px rgba(0, 137, 255, 1);
  text-shadow: 0 0 16px rgba(71,151,220,1),0 0 16px rgba(0, 137, 255, 1),0 0 16px rgba(0, 137, 255, 1);
}

.selected-basemap img{
  -moz-box-shadow: 0px 0px 23px 0px rgba(71,151,220,1);
  box-shadow: 0px 0px 23px 0px rgba(71,151,220,1);
}

base-map-panel img{
  margin: 5px;
  width: 76px;
  height: 51px;
}
base-map-panel .collapse-panel {
  padding: 0;
}

base-map-panel .collapse-panel.collapsed {
  padding: 0 10px 10px 10px;
  height: 200px;
}

.basemap-type {
  cursor: pointer;
}

.ngReactGrid {
    padding: 0;
    cursor: pointer;
    -webkit-user-select: text;
    -moz-user-select: text;
    -ms-user-select: text;
}
.ngReactGrid .ngReactGridFooter, .ngReactGrid table th, .ngReactGrid h1, .ngReactGrid .ngReactGridHeaderWrapper{
  margin-top: 0px;
  background: rgba(60, 60, 60, 0.4);
  color: white;
}

.ngReactGridFooter {
  display: none;
}

.ngReactGrid table {
  background-color: rgba(60, 60, 60, 0.4);
  color: white;
}
.ngReactGrid table tr:nth-child(odd) td {
  background: rgba(90, 90, 90, 0.4);
}
.ngReactGrid table tr:nth-child(even) td {
  background: rgba(60, 60, 60, 0.4);
}
.ngReactGrid table tr {
  border: 1px solid #CCC;
}

.ngReactGrid .ngGridHeaderCellText {
  width:65%;
}

.grid-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
}

.grid-footer .glyphicon {
  cursor: pointer;
}

.disabledTab {
  opacity: 0.05;
}

layer-list .panel-body {
  padding: 0 0 0 15px;
}

.ng-pageslide-right {
	background: rgba(255,255,255,0);
z-index: 1000; position: fixed; width: 300px; height: 100%; overflow: hidden; transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height; top: 50px !important; bottom: 0px; right: 0px;
}

.ng-pageslide-tools {
  background: rgba(255,255,255,0);
  z-index: 1000; position: fixed;top: 100px !important; left: 0px; width: 0px; height: auto; overflow: hidden; transition-duration: 0.5s; -webkit-transition-duration: 0.5s; transition-property: width, height; -webkit-transition-property: width, height;

}

tool-panel {
  color: white;
}

tool-panel .glyphicon {
	padding: 4px;
}

.layer .btn {
	margin-right: 6px;
}

.layer {
	margin-top: 6px;
	margin-bottom: 6px;
}

.sub-layer {
	margin-top: 6px;
	margin-left: 10px;
	margin-bottom: 6px;
}

.legend img {
  margin-right: 6px;
  height: 20px;
  width: 20px;
}

slider {
  position: relative;
  height: 20px;
  margin-top: 30px;
  margin-right: 50px;
  width: 95%;
  display: block;
}

.bar {
  width: 100%;
  height: 100%;
  position: absolute;
  display: block;
  background-color: #eee;
  top: 0;
}

.pointer {
  height: 100%;
  width: 20px;
  position: absolute;
  display: block;
  background: #ccc;
  top: 0;
}

.bubble {
  position: absolute;
  top: -100%;
  display: block;
}

.esriPopup .titleButton.maximize {
  display: none;
}


/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {

}

